--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
   </head>
   <body>
     <header>
-      <h1>Yudha Mochammad Nurrizky</h1>
+      <h1 class='header-name'>Yudha Mochammad Nurrizky</h1>
       <nav>
-        <ul>
+        <ul class='navlist'>
           <li><a href='index.html'>Home</a></li>
           <li><a href='test.html'>Test Page</a></li>
         </ul>
       </nav>
     </header>
     <main>
+      <section>
+        <h2>Portfolio Projects</h2>
+        <a href='https://yudhanurrizky.me/dasmoto-project/' taget='_blank'><button>Dasmoto Project</button></a>
+        <a href='https://yudhanurrizky.me/excursion-project/' target='_blank'><button>Excursion Project</button>
+      </section>
     </main>
   </body>
 </html>
