--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section>
         <h2>Portfolio Projects</h2>
         <a href='https://yudhanurrizky.me/dasmoto-project/' taget='_blank'><button>Dasmoto Project</button></a>
-        <a href='https://yudhanurrizky.me/excursion-project/' target='_blank'><button>Excursion Project</button>
+        <a href='https://yudhanurrizky.me/excursion-project/' target='_blank'><button>Excursion Project</button></a>
       </section>
     </main>
   </body>
