--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section>
         <h2>Portfolio Projects</h2>
-        <a href='https://yudhanurrizky.me/dasmoto-project/' taget='_blank'><button>Dasmoto Project</button></a>
+        <a href='https://yudhanurrizky.me/dasmoto-project/' target='_blank'><button>Dasmoto Project</button></a>
         <a href='https://yudhanurrizky.me/excursion-project/' target='_blank'><button>Excursion Project</button></a>
       </section>
     </main>
