--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Yudha Nurrizky</title>
+    <link rel='icon' href='resources/images/icon.png' type='image/icon type'>
     <link href='resources\css\style.css' rel='stylesheet'>
   </head>
   <body>
