added duck gif and changed quote syntax

--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html>
   <head>
     <title>Yudha Nurrizky</title>
-    <link rel='icon' href='resources/images/icon.png' type='image/icon type'>
-    <link href='resources\css\style.css' rel='stylesheet'>
+    <link rel="icon" href="resources/images/icon.png" type="image/icon type">
+    <link href="resources\css\style.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1 class='header-name'>Yudha Mochammad Nurrizky</h1>
+      <h1 class="header-name">Yudha Mochammad Nurrizky</h1>
       <nav>
-        <ul class='navlist'>
-          <li><a href='index.html'>Home</a></li>
-          <li><a href='test.html'>Test Page</a></li>
+        <ul class="navlist">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="test.html">Test Page</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
         <h2>Portfolio Projects</h2>
-        <a href='https://yudhanurrizky.me/dasmoto-project/' target='_blank'><button>Dasmoto Project</button></a>
-        <a href='https://yudhanurrizky.me/excursion-project/' target='_blank'><button>Excursion Project</button></a>
+        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank"><button>Dasmoto Project</button></a>
+        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank"><button>Excursion Project</button></a>
       </section>
+      <img src="resources/gif/duck.gif">
     </main>
   </body>
 </html>
