--- a/test.html
+++ b/test.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>Test Page</title>
-    <link href='resources\css\style.css' rel='stylesheet'>
+    <link href="resources\css\style.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href='index.html'>Home</a></li>
-          <li><a href='test.html'>Test Page</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="test.html">Test Page</a></li>
         </ul>
       </nav>
       <h1>This is a test file</h1>
