solved linkedin link for index.html and test.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul class="navlist">
           <li><a href="index.html">Home</a></li>
           <li><a href="test.html">Test Page</a></li>
+          <li><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
         </ul>
       </nav>
     </header>
