--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
           </ol>
         </section>
         <section>
-        <a href="https://www.linkedin.com/feed/" target="_blank">This is a link to linkedin for some reason</a>
+        <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">This is a link to linkedin for some reason</a>
           <h2>These are pointless buttons</h2>
             <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&t=10s&ab_channel=NyanCat" target="_blank"><button>Do not click</button></a>
             <a href="https://youtu.be/rvrZJ5C_Nwg?t=143" target="_blank"><button>Definitely Do Not Click</button></a>
