Added styling for navlist

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
       <h1 class="header-name">Yudha Mochammad Nurrizky</h1>
       <nav>
-        <ul class="navlist">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="test.html">Test Page</a></li>
-          <li><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
+        <ul>
+          <li class="navlist"><a href="index.html">Home</a></li>
+          <li class="navlist"><a href="test.html">Test Page</a></li>
+          <li class="navlist"><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
         </ul>
       </nav>
     </header>
