--- a/test.html
+++ b/test.html
@@ -8,8 +8,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="test.html">Test Page</a></li>
+          <li class="navlist"><a href="index.html">Home</a></li>
+          <li class="navlist"><a href="test.html">Test Page</a></li>
+          <li class="navlist"><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
         </ul>
       </nav>
       <h1>This is a test file</h1>
