--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h2>Portfolio Projects</h2>
         <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank"><button>Dasmoto Project</button></a>
         <a href="https://yudhanurrizky.me/excursion-project/" target="_blank"><button>Excursion Project</button></a>
+        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank"><button>Tea Cozy Project</button></a>
       </section>
       <img src="resources/gif/duck.gif">
     </main>
