--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main>
       <section>
         <h2>Portfolio Projects</h2>
-        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank"><button>Dasmoto Project</button></a>
-        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank"><button>Excursion Project</button></a>
-        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank"><button>Tea Cozy Project</button></a>
+        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="button">Dasmoto Project</a>
+        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="button">Excursion Project</a>
+        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="button">Tea Cozy Project</a>
       </section>
       <img src="resources/gif/duck.gif">
     </main>
