capitalization on company project button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Portfolio Projects</h2>
         <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="button">Dasmoto Project</a>
         <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="button">Excursion Project</a>
-        <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="button">company Project</a>
+        <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="button">Company Project</a>
         <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="button">Tea Cozy Project</a>
       </section>
       <img src="resources/gif/duck.gif">
