--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="button">Excursion Project</a>
         <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="button">Tea Cozy Project</a>
         <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="button">Company Project</a>
+        <a href="https://yudhanurrizky.me/club-project/" target="_blank" class="button">Club Project</a>
       </section>
       <img src="resources/gif/duck.gif">
     </main>
