- seperated and named CSS sections - seperated css for navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Yudha Nurrizky</title>
     <link rel="icon" href="resources/images/icon.png" type="image/icon type">
-    <link href="resources\css\style.css" rel="stylesheet">
+    <link href="./resources/css/index-style.css" rel="stylesheet">
+    <link href="./resources/css/navbar-style.css" rel="stylesheet">
   </head>
   <body>
     <header>
