changed navbar style

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <link href="./resources/css/index-style.css" rel="stylesheet">
     <link href="./resources/css/navbar-style.css" rel="stylesheet">
   </head>
+
   <body>
     <header>
-      <nav>
-        <ul>
-          <li class="navlist"><a href="index.html">Home</a></li>
-          <li class="navlist"><a href="test.html">Test Page</a></li>
-          <li class="navlist"><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
-        </ul>
-      </nav>
+      <div class="navbar">
+        <a href="index.html" class="nav-button"><p>Home</p></a>
+        <a href="test.html" class="nav-button"><p>Test Page</p></a>
+        <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank" class="nav-button"><p>Linkedin</p></a>
+      </div>
       <h1 class="header-name">Yudha Mochammad Nurrizky</h1>
     </header>
+
     <main>
       <section>
         <h2>Portfolio Projects</h2>
-        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="button">Dasmoto Project</a>
-        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="button">Excursion Project</a>
-        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="button">Tea Cozy Project</a>
-        <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="button">Company Project</a>
-        <a href="https://yudhanurrizky.me/club-project/" target="_blank" class="button">Club Project</a>
+        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="project-button">Dasmoto Project</a>
+        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="project-button">Excursion Project</a>
+        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="project-button">Tea Cozy Project</a>
+        <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="project-button">Company Project</a>
+        <a href="https://yudhanurrizky.me/club-project/" target="_blank" class="project-button">Club Project</a>
       </section>
       <img src="resources/gif/duck.gif">
     </main>
