--- a/test.html
+++ b/test.html
@@ -2,53 +2,54 @@
 <html>
   <head>
     <title>Test Page</title>
-    <link href="resources\css\style.css" rel="stylesheet">
+    <link href="./resources\css\style.css" rel="stylesheet">
+    <link href="./resources/css/navbar-style.css" rel="stylesheet">
   </head>
+
   <body>
     <header>
-      <nav>
-        <ul>
-          <li class="navlist"><a href="index.html">Home</a></li>
-          <li class="navlist"><a href="test.html">Test Page</a></li>
-          <li class="navlist"><a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">Linkedin</a></li>
-        </ul>
-      </nav>
+      <div class="navbar">
+        <a href="index.html" class="nav-button"><p>Home</p></a>
+        <a href="test.html" class="nav-button"><p>Test Page</p></a>
+        <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank" class="nav-button"><p>Linkedin</p></a>
+      </div>
       <h1>This is a test file</h1>
     </header>
-      <main>
-        <section>
-          <h2>This is a Header</h2>
-          <p>This <em>is</em> <strong>a</strong> sample pararaph.</p>
-        </section>
-        <section>
-        <h2>This is an unordered List</h2>
-          <ul>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-          </ul>
-        </section>
-        <section>
-          <h2>This is an orderd list</h2>
-          <ol>
-            <li>blah</li>
-            <li>blah</li>
-            <li>blah</li>
-          </ol>
-        </section>
-        <section>
-        <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">This is a link to linkedin for some reason</a>
-          <h2>These are pointless buttons</h2>
-            <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&t=10s&ab_channel=NyanCat" target="_blank"><button>Do not click</button></a>
-            <a href="https://youtu.be/rvrZJ5C_Nwg?t=143" target="_blank"><button>Definitely Do Not Click</button></a>
-          <h2>This is a picture of a bear</h2>
-        </section>
-        <figure>
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"><img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="bear"/></a>
-          <figcaption>Really do not click on the bear</figcaption>
-        </figure>
-        <video src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4" controls></video>
-        <iframe width="727" height="409" src="https://www.youtube.com/embed/o_Nc5j2xGg8?list=PLRWvNQVqAeWLPYrIW3bUWik62khdhk2Ro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </main>
+
+    <main>
+      <section>
+        <h2>This is a Header</h2>
+        <p>This <em>is</em> <strong>a</strong> sample pararaph.</p>
+      </section>
+      <section>
+      <h2>This is an unordered List</h2>
+        <ul>
+          <li>blah</li>
+          <li>blah</li>
+          <li>blah</li>
+        </ul>
+      </section>
+      <section>
+        <h2>This is an orderd list</h2>
+        <ol>
+          <li>blah</li>
+          <li>blah</li>
+          <li>blah</li>
+        </ol>
+      </section>
+      <section>
+      <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank">This is a link to linkedin for some reason</a>
+        <h2>These are pointless buttons</h2>
+          <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4&t=10s&ab_channel=NyanCat" target="_blank"><button>Do not click</button></a>
+          <a href="https://youtu.be/rvrZJ5C_Nwg?t=143" target="_blank"><button>Definitely Do Not Click</button></a>
+        <h2>This is a picture of a bear</h2>
+      </section>
+      <figure>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank"><img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="bear"/></a>
+        <figcaption>Really do not click on the bear</figcaption>
+      </figure>
+      <video src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4" controls></video>
+      <iframe width="727" height="409" src="https://www.youtube.com/embed/o_Nc5j2xGg8?list=PLRWvNQVqAeWLPYrIW3bUWik62khdhk2Ro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
   </body>
 </html>
