--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="resources/images/icon.png" type="image/icon type">
     <link href="./resources/css/index-style.css" rel="stylesheet">
     <link href="./resources/css/navbar-style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
+    
   </head>
 
   <body>
