--- a/test.html
+++ b/test.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Test Page</title>
-    <link href="./resources\css\style.css" rel="stylesheet">
+    <link href="./resources\css\test-style.css" rel="stylesheet">
     <link href="./resources/css/navbar-style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
   </head>
 
   <body>
