--- a/index.html
+++ b/index.html
@@ -20,14 +20,26 @@
     </header>
 
     <main>
-      <section>
+      <!-- <section>
         <h2>Portfolio Projects</h2>
         <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="project-button">Dasmoto Project</a>
         <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="project-button">Excursion Project</a>
         <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="project-button">Tea Cozy Project</a>
         <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="project-button">Company Project</a>
         <a href="https://yudhanurrizky.me/club-project/" target="_blank" class="project-button">Club Project</a>
+      </section> -->
+
+      <section class="portfolio">
+        <h2>Portfolio Projects</h2>
+        <div class="container">
+          <img src="./resources/images/portfolio-sites/dasmoto.png">
+          <img src="./resources/images/portfolio-sites/excursion.png">
+          <img src="./resources/images/portfolio-sites/tea-cozy.png">
+          <img src="./resources/images/portfolio-sites/company.png">
+          <img src="./resources/images/portfolio-sites/club.png">
+        </div>
       </section>
+
       <img src="resources/gif/duck.gif">
     </main>
   </body>
