--- a/index.html
+++ b/index.html
@@ -22,21 +22,41 @@
     <main>
       <!-- <section>
         <h2>Portfolio Projects</h2>
-        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank" class="project-button">Dasmoto Project</a>
-        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank" class="project-button">Excursion Project</a>
-        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank" class="project-button">Tea Cozy Project</a>
-        <a href="https://yudhanurrizky.me/company-project/" target="_blank" class="project-button">Company Project</a>
-        <a href="https://yudhanurrizky.me/club-project/" target="_blank" class="project-button">Club Project</a>
+        <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank">
+        <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
+        <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
+        <a href="https://yudhanurrizky.me/company-project/" target="_blank">
+        <a href="https://yudhanurrizky.me/club-project/" target="_blank">
       </section> -->
 
       <section class="portfolio">
         <h2>Portfolio Projects</h2>
         <div class="container">
-          <img src="./resources/images/portfolio-sites/dasmoto.png">
-          <img src="./resources/images/portfolio-sites/excursion.png">
-          <img src="./resources/images/portfolio-sites/tea-cozy.png">
-          <img src="./resources/images/portfolio-sites/company.png">
-          <img src="./resources/images/portfolio-sites/club.png">
+          <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank">
+            <div class="card dasmoto">
+              <h3>Dasmoto Project</h3>
+            </div>
+          </a>
+          <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
+            <div class="card excursion">
+              <h3>Excursion Project</h3>
+            </div>
+          </a>
+          <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
+            <div class="card tea-cozy">
+              <h3>Tea Cozy Project</h3>
+            </div>
+          </a>
+          <a href="https://yudhanurrizky.me/company-project/" target="_blank">
+            <div class="card company">
+              <h3>Company Project</h3>
+            </div>
+          </a>
+          <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
+            <div class="card club">
+              <h3>Club Project</h3>
+            </div>
+          </a>
         </div>
       </section>
 
