added github to navbar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="index.html" class="nav-button"><p>Home</p></a>
         <a href="test.html" class="nav-button"><p>Test Page</p></a>
         <a href="https://www.linkedin.com/in/yudhanurrizky/" target="_blank" class="nav-button"><p>Linkedin</p></a>
+        <a href="https://github.com/yudhanurrizky" target="_blank" class="nav-button"><p>GitHub</p></a>
       </div>
       <h1 class="header-name">Yudha Mochammad Nurrizky</h1>
     </header>
