changed portfolio semantics

--- a/index.html
+++ b/index.html
@@ -23,31 +23,41 @@
       <section class="portfolio">
         <h2>Portfolio Projects</h2>
         <div class="container">
-          <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank">
-            <div class="card dasmoto">
-              <h3>Dasmoto Project</h3>
-            </div>
-          </a>
-          <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
-            <div class="card excursion">
-              <h3>Excursion Project</h3>
-            </div>
-          </a>
-          <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
-            <div class="card tea-cozy">
-              <h3>Tea Cozy Project</h3>
-            </div>
-          </a>
-          <a href="https://yudhanurrizky.me/company-project/" target="_blank">
-            <div class="card company">
-              <h3>Company Project</h3>
-            </div>
-          </a>
-          <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
-            <div class="card club">
-              <h3>Club Project</h3>
-            </div>
-          </a>
+          <div class="card">
+            <a href="https://yudhanurrizky.me/dasmoto-project/" target="_blank">
+              <div class="pic dasmoto">
+                <h3>Dasmoto Project</h3>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
+              <div class="pic excursion">
+                <h3>Excursion Project</h3>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
+              <div class="pic tea-cozy">
+                <h3>Tea Cozy Project</h3>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="https://yudhanurrizky.me/company-project/" target="_blank">
+              <div class="pic company">
+                <h3>Company Project</h3>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
+              <div class="pic club">
+                <h3>Club Project</h3>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
 
