added more info button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <h3>Dasmoto Project</h3>
               </div>
             </a>
+            <p>More Info</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
@@ -36,6 +37,7 @@
                 <h3>Excursion Project</h3>
               </div>
             </a>
+            <p>More Info</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
@@ -43,6 +45,7 @@
                 <h3>Tea Cozy Project</h3>
               </div>
             </a>
+            <p>More Info</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/company-project/" target="_blank">
@@ -50,6 +53,7 @@
                 <h3>Company Project</h3>
               </div>
             </a>
+            <p>More Info</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
@@ -57,6 +61,7 @@
                 <h3>Club Project</h3>
               </div>
             </a>
+            <p>More Info</p>
           </div>
         </div>
       </section>
