added hidden info

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <h3>Dasmoto Project</h3>
               </div>
             </a>
-            <p>More Info</p>
+            <p class="more-info">More Info</p>
+            <p class="info">HTML, CSS, blah blah</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
@@ -37,7 +38,8 @@
                 <h3>Excursion Project</h3>
               </div>
             </a>
-            <p>More Info</p>
+            <p class="more-info">More Info</p>
+            <p class="info">HTML, CSS, blah blah</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
@@ -45,7 +47,8 @@
                 <h3>Tea Cozy Project</h3>
               </div>
             </a>
-            <p>More Info</p>
+            <p class="more-info">More Info</p>
+            <p class="info">HTML, CSS, blah blah</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/company-project/" target="_blank">
@@ -53,7 +56,8 @@
                 <h3>Company Project</h3>
               </div>
             </a>
-            <p>More Info</p>
+            <p class="more-info">More Info</p>
+            <p class="info">HTML, CSS, blah blah</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
@@ -61,7 +65,8 @@
                 <h3>Club Project</h3>
               </div>
             </a>
-            <p>More Info</p>
+            <p class="more-info">More Info</p>
+            <p class="info">HTML, CSS, blah blah</p>
           </div>
         </div>
       </section>
