--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 <h3>Dasmoto Project</h3>
               </div>
             </a>
-            <p class="more-info">More Info</p>
-            <p class="info">HTML, CSS, blah blah</p>
+            <p class="info">HTML, CSS, Git</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/excursion-project/" target="_blank">
@@ -38,8 +37,7 @@
                 <h3>Excursion Project</h3>
               </div>
             </a>
-            <p class="more-info">More Info</p>
-            <p class="info">HTML, CSS, blah blah</p>
+            <p class="info">HTML, CSS, Git</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/teacozy-project/" target="_blank">
@@ -47,8 +45,7 @@
                 <h3>Tea Cozy Project</h3>
               </div>
             </a>
-            <p class="more-info">More Info</p>
-            <p class="info">HTML, CSS, blah blah</p>
+            <p class="info">HTML, CSS, Git, Responsive</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/company-project/" target="_blank">
@@ -56,8 +53,7 @@
                 <h3>Company Project</h3>
               </div>
             </a>
-            <p class="more-info">More Info</p>
-            <p class="info">HTML, CSS, blah blah</p>
+            <p class="info">HTML, CSS, Git, Responsive</p>
           </div>
           <div class="card">
             <a href="https://yudhanurrizky.me/club-project/" target="_blank">  
@@ -65,8 +61,7 @@
                 <h3>Club Project</h3>
               </div>
             </a>
-            <p class="more-info">More Info</p>
-            <p class="info">HTML, CSS, blah blah</p>
+            <p class="info">HTML, CSS, Git, Responsive, Media Query</p>
           </div>
         </div>
       </section>
