added interactive show duck button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/index-style.css" rel="stylesheet">
     <link href="./resources/css/navbar-style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
+    <script src="./javascript/index.js" defer></script>
   </head>
 
   <body>
@@ -66,7 +67,11 @@
         </div>
       </section>
 
-      <img src="resources/gif/duck.gif">
+      <section>
+        <img class="gif" id="gif" src="resources/gif/duck.gif">
+        <p class="gif-button" id="gif-button">Press for Duck</p>
+      </section>
+
     </main>
   </body>
 </html>
